agregué comentarios en páginas

--- a/Pages/nosotros.html
+++ b/Pages/nosotros.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <!--  Etiquetas meta  -->    
     <meta charset="UTF-8">  
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--  Keywords  -->
     <meta name="keywords" content="produccion, shows, eventos, fiestas, cumpleaños, entretenimiento, nosotros, productora"> 
+    <!--  Título de la página  -->
     <title>Más información sobre la productora de eventos</title>
+    <!--  Descripción de la página  -->
     <meta name="description" content="Die Stern es un productora dedicada a la realización de shows para animar todo tipo de eventos">
+    <!--  Fuentes de la página  -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Gilda+Display&family=Playfair+Display+SC&display=swap" rel="stylesheet">
+    <!--  Íconos  -->
     <script src="https://kit.fontawesome.com/7ad48722f8.js" crossorigin="anonymous"></script>
+    <!--  Página de estilos  -->
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 
@@ -20,23 +27,24 @@
         <a href="../index.html"><img class="logo" src="../Images/logo.jpg" alt="logo"></a>
         <a href="../index.html"><h1>Die Stern Producciones</h1></a>
         <a href="#nav" class="menu-abrir"><i class="fas fa-bars"></i></a>
-        <nav id="nav">
+          <nav id="nav">
             <a class="nav-link" href="../index.html">Home</a>
             <a class="nav-link active" href="../Pages/nosotros.html">Nosotros</a>
             <a class="nav-link" href="../Pages/shows.html">Shows</a>
             <a class= "nav-link" href="../Pages/contactoypresupuesto.html">Contacto y presupuesto</a>
             <a class= "nav-link" href="../Pages/quieroserparte.html">Quiero ser parte</a>
             <a href="#" class="menu-cerrar"><i class="fas fa-times"></i></a>
-        </nav>
+          </nav>
       </div>
-  </header>
-
-  <section>
-        <!--  Inicio contenido principal  -->
-        <div class="titulo-nosotros">
+    </header>
+    <!--  Fin encabezado  -->
+  
+    <!--  Inicio contenido principal  -->
+    <section>
+      <div class="titulo-nosotros">
         <h1>Quiénes somos</h1>
-        </div>
-        <div class="container-nosotros">
+      </div>
+      <div class="container-nosotros">
         <div class="texto-nosotros">
         <p>"Die Stern" (la estrella, en alemán) nace de la necesidad de propocionarle trabajo a artistas de diversa índole. <br>
         En los comienzos, sus propios fundadores trabajaban como artistas. <br> 
@@ -47,36 +55,36 @@
         ¡Acompañanos en este viaje que se encuentra en constante crecimiento! </p>
         </div>
         <div>
-            <img class="container-nosotros__imagen" src="../Images/logo.jpeg" alt="">
+          <img class="container-nosotros__imagen" src="../Images/logo.jpeg" alt="">
         </div>
-        
-        <nav class="centrado">
+        <div class="centrado">
             <button class="container-nosotros__boton"><a href="#">¡Conocenos más!</a></button>
-        </nav>
-        </div>  
+        </div>
+      </div>  
     </section>
-
+    <!--  Fin contenido principal  -->
+    
     <!--  Pie de página  -->
     <footer class="footer">
-        <p class="footer__derechos"><i class="far fa-copyright"></i>2021 - Página creada por Micaela Casebonne</p>
-        <p class="footer__redes">Seguinos en nuestras redes sociales!</p>
-            <div class="redes-sociales">
-                <ul>
-                    <li><i class="fab fa-twitter"></i></li>
-                    <li><i class="fab fa-instagram"></i></li>
-                    <li><i class="fab fa-facebook"></i></li>
-                </ul>
-            </div>
-            <div class="menu-footer">
-                <ul>
-                    <li> <a href="../index.html">Home</a> </li>
-                    <li> <a href="../Pages/nosotros.html">Nosotros</a> </li>
-                    <li> <a href="../Pages/shows.html">Shows</a> </li>
-                    <li> <a href="../Pages/contactoypresupuesto.html">Contacto y Presupuesto</a> </li>
-                    <li> <a href="../Pages/quieroserparte.html">Quiero Ser Parte</a> </li>
-                </ul>
-            </div>
-        </footer>
-
+      <p class="footer__derechos"><i class="far fa-copyright"></i>2021 - Página creada por Micaela Casebonne</p>
+      <p class="footer__redes">Seguinos en nuestras redes sociales!</p>
+        <div class="redes-sociales">
+          <ul>
+            <li><i class="fab fa-twitter"></i></li>
+            <li><i class="fab fa-instagram"></i></li>
+            <li><i class="fab fa-facebook"></i></li>
+          </ul>
+        </div>
+        <div class="menu-footer">
+          <ul>
+            <li> <a href="../index.html">Home</a> </li>
+            <li> <a href="../Pages/nosotros.html">Nosotros</a> </li>
+            <li> <a href="../Pages/shows.html">Shows</a> </li>
+            <li> <a href="../Pages/contactoypresupuesto.html">Contacto y Presupuesto</a> </li>
+            <li> <a href="../Pages/quieroserparte.html">Quiero Ser Parte</a> </li>
+          </ul>
+        </div>
+    </footer>
+    <!--  Fin pie de página  -->
 </body>
 </html>
