--- a/Pages/shows.html
+++ b/Pages/shows.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <!--  Etiquetas meta  -->
   <meta charset="UTF-8">  
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--  Keywords  -->
   <meta name="keywords" content="shows, eventos, fiestas, cumpleaños, entretenimiento, acrobacias, fuego, malabares, luces, magia,
-    bailarines, música, bandas, artistas, emoción, alegría, felicidad">  
+  bailarines, música, bandas, artistas, emoción, alegría, felicidad">  
+  <!--  Título de la página  -->
   <title>Shows para toda clase de eventos</title>
+  <!--  Descripción de la página  -->
   <meta name="description" content="Die Stern es un productora dedicada a la realización de shows para animar todo tipo de eventos">
+  <!--  Fuentes de la página  -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Gilda+Display&family=Playfair+Display+SC&display=swap" rel="stylesheet">
+  <!--  Íconos  -->
   <script src="https://kit.fontawesome.com/7ad48722f8.js" crossorigin="anonymous"></script>
+  <!--  Animaciones  -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
   <link rel="stylesheet" href="css/animate.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <!--  Página de estilos  -->
   <link rel="stylesheet" href="../css/estilos.css">
 </head>
 
@@ -24,19 +32,21 @@
       <a href="../index.html"><img class="logo" src="../Images/logo.jpg" alt="logo"></a>
       <a href="../index.html"><h1>Die Stern Producciones</h1></a>
       <a href="#nav" class="menu-abrir"><i class="fas fa-bars"></i></a>
-      <nav id="nav">
-        <a class="nav-link" href="../index.html">Home</a>
-        <a class="nav-link" href="../Pages/nosotros.html">Nosotros</a>
-        <a class="nav-link active" href="../Pages/shows.html">Shows</a>
-        <a class= "nav-link" href="../Pages/contactoypresupuesto.html">Contacto y presupuesto</a>
-        <a class= "nav-link" href="../Pages/quieroserparte.html">Quiero ser parte</a>
-        <a href="#" class="menu-cerrar"><i class="fas fa-times"></i></a>
-      </nav>
+        <nav id="nav">
+          <a class="nav-link" href="../index.html">Home</a>
+          <a class="nav-link" href="../Pages/nosotros.html">Nosotros</a>
+          <a class="nav-link active" href="../Pages/shows.html">Shows</a>
+          <a class= "nav-link" href="../Pages/contactoypresupuesto.html">Contacto y presupuesto</a>
+          <a class= "nav-link" href="../Pages/quieroserparte.html">Quiero ser parte</a>
+          <a href="#" class="menu-cerrar"><i class="fas fa-times"></i></a>
+        </nav>
     </div>
   </header>
+<!--  Fin encabezado  -->
 
+  <!--  Inicio contenido principal  -->
+  <!--  Barra de navegación  -->
   <section>
-  <!--  Inicio contenido principal  -->    
     <h1 class="titulo-pag-shows">Nuestros shows</h1>
     <h2 class="subtitulo-pag-shows">Para todo tipo de eventos</h2>
       <div class="navbar-shows">
@@ -52,31 +62,38 @@
         </ul>
       </div>
   </section>
-
+  <!--  Fin barra de navegación -->
+  
+  <!--  Inicio sección  -->
   <section>
     <div class="container-shows">
+      <!--  Show aéreo  -->
       <div id="artistasaereos">
         <div class="container-shows__texto" data-aos="fade-up" data-aos-delay="200" data-aos-easing="ease-in-sine">
           <p class="titulo-shows">Artistas aéreos</p>
           <p class="texto-shows">Acróbatas de diversas disciplinas aéreas, tales como trapecio, tela, aro, anillas, palo chino; dispuestos a hacer de tu evento algo fascinante e inolvidable.
           ¡Contamos con estructuras tanto para interiores como para exteriores!</p>
-          </div>
+        </div>
       </div>
         <div data-aos="fade-down" data-aos-delay="200" data-aos-easing="ease-in-sine">
-        <img class="img-shows" src="../Images/showacroaereo.jpg" alt="acrobacia de aire" title="Show de acrobacias aéreas en boliche">
+          <img class="img-shows" src="../Images/showacroaereo.jpg" alt="acrobacia de aire" title="Show de acrobacias aéreas en boliche">
         </div>
-      
-        <div data-aos="fade-down" data-aos-delay="400" data-aos-easing="ease-in-sine">
-        <img class="img-shows" src="../Images/acrobaciashows.jpg" alt="acrobacia de piso" title="Show de acrobacia de piso en salón">
-        </div>
-        <div id="artistasdepiso">
-          <div data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-sine">
-          <p class="titulo-shows">Artistas de piso</p>
-          <p class="texto-shows">Acróbatas de piso preparados para deleitarte con sus magníficas proezas. Contamos con artistas especializados en acrobacias individuales, de dúo, contorsionistas, hulistas 
-          y malabaristas, para que elijas lo que mejor se adapta a tu evento y tus preferencias.</p>
-          </div>
-        </div>
+      <!-- Fin show aéreo  -->
 
+      <!--  Show de piso  -->
+      <div data-aos="fade-down" data-aos-delay="400" data-aos-easing="ease-in-sine">
+        <img class="img-shows" src="../Images/acrobaciashows.jpg" alt="acrobacia de piso" title="Show de acrobacia de piso en salón">
+      </div>
+      <div id="artistasdepiso">
+        <div data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-sine">
+        <p class="titulo-shows">Artistas de piso</p>
+        <p class="texto-shows">Acróbatas de piso preparados para deleitarte con sus magníficas proezas. Contamos con artistas especializados en acrobacias individuales, de dúo, contorsionistas, hulistas 
+        y malabaristas, para que elijas lo que mejor se adapta a tu evento y tus preferencias.</p>
+      </div>
+      </div>
+      <!--  Fin show de piso  -->
+
+      <!--  Show de baile  -->
       <div id="bailarinesybailarinas">
         <div data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-sine">
         <p class="titulo-shows">Bailarines y Bailarinas</p>
@@ -84,21 +101,25 @@
         reggaeton, cumbia, entre otros. Coreografías armadas para cada ocasión.</p>
         </div>
       </div>  
-          <div data-aos="fade-down" data-aos-delay="400" data-aos-easing="ease-in-sine">
-          <img class="img-shows" src="../Images/bailarin.jpg" alt="bailarines" title="Show de bailarines y bailarinas">
-          </div>
-  
         <div data-aos="fade-down" data-aos-delay="400" data-aos-easing="ease-in-sine">
-        <img class="img-shows" src="../Images/banda.jpg" alt="banda de musica" title="Show con banda de música">
+          <img class="img-shows" src="../Images/bailarin.jpg" alt="bailarines" title="Show de bailarines y bailarinas">
         </div>
-        <div id="bandasdemusica">
-          <div data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-sine">
-          <p class="titulo-shows">Bandas de música</p> 
-          <p class="texto-shows"> Contamos con bandas especializadas en diferentes géneros musicales y que tocan 
-          tanto temas propios, como covers de los temas más conocidos. ¡Todo adaptado a gusto del cliente!</p>
-          </div>
-        </div>
+      <!--  Fin show de baile  -->
 
+      <!--  Show musical  -->
+      <div data-aos="fade-down" data-aos-delay="400" data-aos-easing="ease-in-sine">
+        <img class="img-shows" src="../Images/banda.jpg" alt="banda de musica" title="Show con banda de música">
+      </div>
+      <div id="bandasdemusica">
+        <div data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-sine">
+        <p class="titulo-shows">Bandas de música</p> 
+        <p class="texto-shows"> Contamos con bandas especializadas en diferentes géneros musicales y que tocan 
+        tanto temas propios, como covers de los temas más conocidos. ¡Todo adaptado a gusto del cliente!</p>
+        </div>
+      </div>
+      <!--  Fin show musical  -->
+
+      <!--  Show de magia  -->
       <div id="magiaeilusionismo">
         <div data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-sine">
         <p class="titulo-shows">Magia e ilusionismo</p>
@@ -107,22 +128,26 @@
         Ideal, además, para quienes quieran hacer a sus invitados, partícipes del show.</p>
         </div>
       </div>  
-          <div data-aos="fade-down" data-aos-delay="400" data-aos-easing="ease-in-sine">
-          <img class="img-shows" src="../Images/magia.jpg" alt="magia" title="Show de magia con público infantil">
-          </div>
+      <div data-aos="fade-down" data-aos-delay="400" data-aos-easing="ease-in-sine">
+        <img class="img-shows" src="../Images/magia.jpg" alt="magia" title="Show de magia con público infantil">
+      </div>
+      <!--  Fin show de magia  -->
 
-        <div data-aos="fade-down" data-aos-delay="400" data-aos-easing="ease-in-sine">
+      <!--  Show de fuego  -->
+      <div data-aos="fade-down" data-aos-delay="400" data-aos-easing="ease-in-sine">
         <img class="img-shows" src="../Images/showdefuego.jpg" alt="fuego" title="Show de fuego al aire libre">
+      </div>
+      <div id="showdefuego">
+        <div data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-sine">
+        <p class="titulo-shows">Show de fuego</p>
+        <p class="texto-shows">Porque no nos conformamos con los shows tradicionales, 
+        ofrecemos esta alternativa apta para aquellos a los que les gusta el riesgo, y disfrutan de salir de lo convencional.
+        ¡Nuestro show de fuego promete ser algo con lo que sentirse maravillado!</p>
         </div>
-        <div id="showdefuego">
-          <div data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-sine">
-          <p class="titulo-shows">Show de fuego</p>
-          <p class="texto-shows">Porque no nos conformamos con los shows tradicionales, 
-          ofrecemos esta alternativa apta para aquellos a los que les gusta el riesgo, y disfrutan de salir de lo convencional.
-          ¡Nuestro show de fuego promete ser algo con lo que sentirse maravillado!</p>
-          </div>
-        </div>
+      </div>
+      <!--  Fin show de fuego  -->
 
+      <!--  Show de humor  -->
       <div id="showdehumor">
         <div data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-sine">
         <p class="titulo-shows">Show de humor</p>
@@ -130,12 +155,13 @@
         que más fácilmente se adapta a todo tipo de eventos. ¡Grandes carcajadas garantizadas!</p>
         </div>
       </div>
-          <div data-aos="fade-down" data-aos-delay="400" data-aos-easing="ease-in-sine">
-          <img class="img-shows" src="../Images/showhumor.jpg" alt="humor" title="Show de humor y comedia en un bar">
-          </div>
-
         <div data-aos="fade-down" data-aos-delay="400" data-aos-easing="ease-in-sine">
-        <img class="img-shows" src="../Images/showluces1.jpg" alt="luces" title="Show de luces en interior">
+          <img class="img-shows" src="../Images/showhumor.jpg" alt="humor" title="Show de humor y comedia en un bar">
+        </div>
+
+        <!--  Show de luces  -->
+        <div data-aos="fade-down" data-aos-delay="400" data-aos-easing="ease-in-sine">
+          <img class="img-shows" src="../Images/showluces1.jpg" alt="luces" title="Show de luces en interior">
         </div>
         <div id="showdeluces">
           <div data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-sine">
@@ -144,34 +170,37 @@
           cuyo objetivo es crear patrones que dejen boquiabierto a quien los mire. ¡Y todo al ritmo de la música!</p>
           </div>    
         </div>
+        <!--  Fin show de luces  -->
     </div> 
   </section>
+  <!--  Fin sección  -->
+  <!--  Fin contenido principal  -->
 
-    <!--  Pie de página  -->    
-    <footer class="footer">
-      <p class="footer__derechos"><i class="far fa-copyright"></i>2021 - Página creada por Micaela Casebonne</p>
-      <p class="footer__redes">Seguinos en nuestras redes sociales!</p>
-        <div class="redes-sociales">
-          <ul>
-            <li><i class="fab fa-twitter"></i></li>
-            <li><i class="fab fa-instagram"></i></li>
-            <li><i class="fab fa-facebook"></i></li>
-          </ul>
-        </div>
-        <div class="menu-footer">
-          <ul>
-            <li> <a href="../index.html">Home</a> </li>
-            <li> <a href="../Pages/nosotros.html">Nosotros</a> </li>
-            <li> <a href="../Pages/shows.html">Shows</a> </li>
-            <li> <a href="../Pages/contactoypresupuesto.html">Contacto y Presupuesto</a> </li>
-            <li> <a href="../Pages/quieroserparte.html">Quiero Ser Parte</a> </li>
-          </ul>
-        </div>
-    </footer>
-    
-        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-        <script>
-          AOS.init();
-        </script>
-      </body>
+  <!--  Pie de página  -->    
+  <footer class="footer">
+    <p class="footer__derechos"><i class="far fa-copyright"></i>2021 - Página creada por Micaela Casebonne</p>
+    <p class="footer__redes">Seguinos en nuestras redes sociales!</p>
+      <div class="redes-sociales">
+        <ul>
+          <li><i class="fab fa-twitter"></i></li>
+          <li><i class="fab fa-instagram"></i></li>
+          <li><i class="fab fa-facebook"></i></li>
+        </ul>
+      </div>
+      <div class="menu-footer">
+        <ul>
+          <li> <a href="../index.html">Home</a> </li>
+          <li> <a href="../Pages/nosotros.html">Nosotros</a> </li>
+          <li> <a href="../Pages/shows.html">Shows</a> </li>
+          <li> <a href="../Pages/contactoypresupuesto.html">Contacto y Presupuesto</a> </li>
+          <li> <a href="../Pages/quieroserparte.html">Quiero Ser Parte</a> </li>
+        </ul>
+      </div>
+  </footer>
+  <!--  Fin pie de página  -->
+  
+  <!--  Scripts  -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script> AOS.init(); </script>
+</body>
 </html>
