--- a/index.html
+++ b/index.html
@@ -1,50 +1,58 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">  
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="produccion, shows, eventos, fiestas, cumpleaños, entretenimiento, productora"> 
-    <title>Inicio / Producción de shows para eventos</title>
-    <meta name="description" content="Este es el sitio oficial de Die Stern, donde vas a poder contratar los mejores shows para hacer que tu evento sea único.">  
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Gilda+Display&family=Playfair+Display+SC&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/7ad48722f8.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/estilos.css">  
-  </head>
+  <!--Etiquetas meta-->
+  <meta charset="UTF-8">  
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--Keywords-->
+  <meta name="keywords" content="produccion, shows, eventos, fiestas, cumpleaños, entretenimiento, productora"> 
+  <!--Título de la página-->
+  <title>Inicio / Producción de shows para eventos</title>
+  <!--Descripción de la página-->
+  <meta name="description" content="Este es el sitio oficial de Die Stern, donde vas a poder contratar los mejores shows para hacer que tu evento sea único.">  
+  <!--Fuentes de la página-->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Gilda+Display&family=Playfair+Display+SC&display=swap" rel="stylesheet">
+  <!--Íconos-->
+  <script src="https://kit.fontawesome.com/7ad48722f8.js" crossorigin="anonymous"></script>
+  <!--Página de estilos-->
+  <link rel="stylesheet" href="css/estilos.css">  
+</head>
 
 <body>
-    <!--  Inicio encabezado  -->
-    <header class="header-sitio">
-      <div class="container header-container">
-        <a href="index.html"><img class="logo" src="Images/logo.jpg" alt="logo"></a>
-        <a href="index.html"><h1>Die Stern Producciones</h1></a>
-        <a href="#nav" class="menu-abrir"><i class="fas fa-bars"></i></a>
+  <!--  Inicio encabezado  -->
+  <header class="header-sitio">
+    <div class="container header-container">
+      <a href="index.html"><img class="logo" src="Images/logo.jpg" alt="logo"></a>
+      <a href="index.html"><h1>Die Stern Producciones</h1></a>
+      <a href="#nav" class="menu-abrir"><i class="fas fa-bars"></i></a>
         <nav id="nav">
-            <a class="nav-link active" href="index.html">Home</a>
-            <a class="nav-link" href="Pages/nosotros.html">Nosotros</a>
-            <a class="nav-link" href="Pages/shows.html">Shows</a>
-            <a class= "nav-link" href="Pages/contactoypresupuesto.html">Contacto y presupuesto</a>
-            <a class= "nav-link" href="Pages/quieroserparte.html">Quiero ser parte</a>
-            <a href="#" class="menu-cerrar"><i class="fas fa-times"></i></a>
+          <a class="nav-link active" href="index.html">Home</a>
+          <a class="nav-link" href="Pages/nosotros.html">Nosotros</a>
+          <a class="nav-link" href="Pages/shows.html">Shows</a>
+          <a class= "nav-link" href="Pages/contactoypresupuesto.html">Contacto y presupuesto</a>
+          <a class= "nav-link" href="Pages/quieroserparte.html">Quiero ser parte</a>
+          <a href="#" class="menu-cerrar"><i class="fas fa-times"></i></a>
         </nav>
-      </div>
+    </div>
   </header>
+  <!--  Fin de encabezado  -->
 
-    <!--  Inicio contenido principal  -->
-    <section class="carousel">
-      <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="Images/fuegoindex.jpg" class="imagen-carousel d-block" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="Images/acrobaciasindex.jpg" class="imagen-carousel d-block" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="Images/lucesindex.jpg" class="imagen-carousel d-block" alt="...">
-          </div>
+  <!--  Inicio primera sección  -->
+  <section class="carousel">
+    <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="Images/fuegoindex.jpg" class="imagen-carousel d-block" alt="...">
         </div>
+        <div class="carousel-item">
+          <img src="Images/acrobaciasindex.jpg" class="imagen-carousel d-block" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="Images/lucesindex.jpg" class="imagen-carousel d-block" alt="...">
+        </div>
+      </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
@@ -53,62 +61,70 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
-      </div>
-    </section>
-
-    <section class="seccion-dos">
-        <h2>Lo que ofrecemos</h2>
-        <p class="seccion-dos__subtitulo">Brindamos shows para todos los gustos, para toda clase de eventos y para todo tipo de público.
-        <br> Más de 10 años avalan nuestra experiencia en el rubro.</p>
-        <div class="container-grid">
+    </div>
+  </section>
+  <!-- Fin primera sección  -->
+  
+  <!-- Inicio segunda sección  -->
+  <section class="seccion-dos">
+    <h2>Lo que ofrecemos</h2>
+    <p class="seccion-dos__subtitulo">Brindamos shows para todos los gustos, para toda clase de eventos y para todo tipo de público.
+    <br> Más de 10 años avalan nuestra experiencia en el rubro.</p>
+      <div class="container-grid">
         <img class="container-grid__img1" src="Images/luzindex.jpg" alt="malabares" title="Malabares con luces">
         <img class="container-grid__img2" src="Images/acropisoindex.jpg" alt="acrobacias" title="Show de acrobacias entre dos personas">
         <img class="container-grid__img3" src="Images/acropiso2index.jpg" alt="acrobacia" title="Una artista haciendo contorsionismo">
-        </div>
-            <div class="centrado">
-                <button class="seccion-dos__boton"><a href="Pages/shows.html">Ver shows</a></button>  
-            </div>   
-    </section>
+      </div>
+      <div class="centrado">
+        <button class="seccion-dos__boton"><a href="Pages/shows.html">Ver shows</a></button>  
+      </div>   
+  </section>
+  <!--  Fin segunda sección  -->
 
-    <section class="seccion-tres">
-        <h2>Desde <br><br><span class="seccion-tres__span">2010</span><br><br>llevando alegría a tus eventos</h2>
-        <nav class="seccion-tres__centrado">
-            <iframe src="https://player.vimeo.com/video/237799984" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-        </nav>
-    </section>
+  <!--  Inicio tercera sección  -->
+  <section class="seccion-tres">
+    <h2>Desde <br><br><span class="seccion-tres__span">2010</span><br><br>llevando alegría a tus eventos</h2>
+      <div class="seccion-tres__centrado">
+        <iframe src="https://player.vimeo.com/video/237799984" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+      </div>
+  </section>
+  <!-- Fin tercera sección  -->
 
-   <section class="seccion-cuatro"> 
-        <h3>¿Querés saber más sobre nosotros o solicitar tu presupuesto? <br>
-        No dudes en <a href="Pages/contactoypresupuesto.html#formularioClientes">contactarnos</a>!</h3> 
-        <br><br>
-        <h3>¿Sos artista de cualquier índole y te interesa sumarte a nuestras propuestas? <br>
-        <a href="Pages/quieroserparte.html#formularioArtistas">¡Quiero ser parte!</a></h2>
-    </section>
+  <!--  Inicio cuarta sección  -->
+  <section class="seccion-cuatro"> 
+    <h3>¿Querés saber más sobre nosotros o solicitar tu presupuesto? <br>
+    No dudes en <a href="Pages/contactoypresupuesto.html#formularioClientes">contactarnos</a>!</h3> 
+    <br><br>
+    <h3>¿Sos artista de cualquier índole y te interesa sumarte a nuestras propuestas? <br>
+      <a href="Pages/quieroserparte.html#formularioArtistas">¡Quiero ser parte!</a></h2>
+  </section>
+  <!--  Fin cuarta sección  -->
 
-    <!--  Pie de página  -->
-    <footer class="footer">
+  <!--  Inicio pie de página  -->
+  <footer class="footer">
     <p class="footer__derechos"><i class="far fa-copyright"></i>2021 - Página creada por Micaela Casebonne</p>
     <p class="footer__redes">Seguinos en nuestras redes sociales!</p>
-        <div class="redes-sociales">
-            <ul>
-                <li><i class="fab fa-twitter"></i></li>
-                <li><i class="fab fa-instagram"></i></li>
-                <li><i class="fab fa-facebook"></i></li>
-            </ul>
-        </div>
-        <div class="menu-footer">
-            <ul>
-                <li> <a href="index.html">Home</a> </li>
-                <li> <a href="Pages/nosotros.html">Nosotros</a> </li>
-                <li> <a href="Pages/shows.html">Shows</a> </li>
-                <li> <a href="Pages/contactoypresupuesto.html">Contacto y Presupuesto</a> </li>
-                <li> <a href="Pages/quieroserparte.html">Quiero Ser Parte</a> </li>
-            </ul>
-        </div>
-    </footer>
-    
+      <div class="redes-sociales">
+        <ul>
+          <li><i class="fab fa-twitter"></i></li>
+          <li><i class="fab fa-instagram"></i></li>
+          <li><i class="fab fa-facebook"></i></li>
+        </ul>
+      </div>
+      <div class="menu-footer">
+        <ul>
+          <li> <a href="index.html">Home</a> </li>
+          <li> <a href="Pages/nosotros.html">Nosotros</a> </li>
+          <li> <a href="Pages/shows.html">Shows</a> </li>
+          <li> <a href="Pages/contactoypresupuesto.html">Contacto y Presupuesto</a> </li>
+          <li> <a href="Pages/quieroserparte.html">Quiero Ser Parte</a> </li>
+        </ul>
+      </div>
+  </footer>
+  <!-- Fin pie de página  -->
+  
+  <!-- Scripts de Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script> 
+</body>
 </html>
